2002-05-09  Jody Goldberg <jody@gnome.org>

	* gnome-ui-properties.glade : add a help button.
	* gnome-ui-properties.c (dialog_button_clicked_cb) : ditto.

2002-05-06  jacob berkman  <jacob@ximian.com>

	* ui-properties.glade.h: remove unused file

2002-05-06  Anders Carlsson  <andersca@gnu.org>

	* gnome-ui-properties.c: (create_dialog):
	Fix the  support for both_horiz as the toolbar style.
	
	* gnome-ui-properties.glade:
	Re-add all option menu items; Somehow they got lost.
	
2002-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* ui-properties.glade: Remove translatable="yes" for a wrong case.
	
2002-04-25  Seth Nickell  <snickell@stanford.edu>

	* behavior.desktop.in:

	Move out of advanced, add nicer tooltip (still crummy, but better).

2002-04-25  Jody Goldberg <jody@gnome.org>

	* gnome-ui-properties.c (set_toolbar_style) : Add GTK_TOOLBAR_BOTH_HORIZ

2002-04-10  Seth Nickell  <snickell@stanford.edu>

	* gnome-ui-properties.glade:

	Change "Menu items have icons" to "Menu items can have icons"

2002-04-02  Jody Goldberg <jody@gnome.org>

	* gnome-ui-properties.c (setup_dialog) : suppress warnings.

2002-04-10  Seth Nickell  <snickell@stanford.edu>

	* gnome-ui-properties.c: (create_dialog):
	* gnome-ui-properties.glade:
	* ui-properties.glade:

	Somebody started rennaming the glade file but didn't follow
	through. Fixing the build by finishing the change.
	
2002-03-21  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-ui-properties.c (toolbar_to_widget): Check GConf value type

2002-03-21  Dave Camp  <dave@ximian.com>

	* gnome-ui-properties.c: (show_handlebar), (set_toolbar_style),
	(toolbar_style_cb), (set_have_icons): New functions.
	(toolbar_detachable_cb): Call show_handlebar.
	(menus_have_icons_cb): Call set_have_icons.
	(setup_dialog): Connect to the style peditor's value_changed signal,
	and set the initial states of the example widgets.

2002-03-19  Richard Hestilow  <hestilow@ximian.com>
